@@ -37,6 +37,8 @@ plugin.tx_solr {
 			fields = content^40.0, title^5.0, keywords^2.0, tagsH1^5.0, tagsH2H3^3.0, tagsH4H5H6^2.0, tagsInline^1.0
 		}
 
+		form = simple
+
 		results {
 			resultsPerPage = {$plugin.tx_solr.search.results.resultsPerPage}
 			resultsPerPageSwitchOptions = 10, 20, 30, 50
@@ -185,8 +187,6 @@ plugin.tx_solr {
 		suggestField = spell
 		forceHttps = 0
 	}
-
-	searchForm = simple
 
 		// TODO move to search.results
 	searchResultsViewComponents {
